# Gierka_projekt

./: CMakeLists.txt  Linki.txt
src/: AnimatedSprite.h  Bohater.h  Locations.h  Main.cpp  Npc.h  Postac.h  Potwor.h  Walk.h
